--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <body>
     <!-- Header Section Start -->
     <header id="slider-area">  
-      <nav class="navbar navbar-expand-md fixed-top scrolling-navbar bg-white">
+      <nav class="navbar navbar-expand-md fixed-top scrolling-navbar navbar-bg-dark">
         <div class="container">          
           <a class="navbar-brand" href="index.html">
             <span class="lni-bulb"></span>主題攝影棚
@@ -38,16 +38,16 @@
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto w-100 justify-content-end">
               <li class="nav-item">
-                <a class="nav-link page-scroll" href="#slider-area">首頁</a>
+                <a class="nav-link page-scroll text-gray" href="#slider-area">首頁</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link page-scroll" href="#team">關於我們</a>
+                <a class="nav-link page-scroll text-gray" href="#team">關於我們</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link page-scroll" href="#choose">選擇攝影棚</a>
+                <a class="nav-link page-scroll text-gray" href="#choose">選擇攝影棚</a>
               </li>  
               <li class="nav-item">
-                <a class="nav-link page-scroll" href="#contact">聯絡我們</a>
+                <a class="nav-link page-scroll text-gray" href="#contact">聯絡我們</a>
               </li> 
             </ul>              
           </div>
