--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <meta name="author" content="Grayrids">
     <title>主題攝影棚</title>
 
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/line-icons.css">
@@ -47,6 +52,9 @@
                 <a class="nav-link page-scroll text-gray" href="#choose">選擇攝影棚</a>
               </li>  
               <li class="nav-item">
+                <a class="nav-link page-scroll text-gray" href="#book">預約</a>
+              </li>  
+              <li class="nav-item">
                 <a class="nav-link page-scroll text-gray" href="#contact">聯絡我們</a>
               </li> 
             </ul>              
@@ -72,7 +80,7 @@
                   日本史上年號最短的時代<br>
                   戰爭後的各種意識抬頭以及西洋化，體現在時尚、建築上面，因此又稱「大正浪漫」
                 </h4>
-                <a href="#" class="btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">我要預約</a>
+                <a href="#" class="btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">預約攝影棚</a>
               </div>
             </div>
             <div class="carousel-item">
@@ -81,7 +89,7 @@
                 <!-- <h3 class="wow fadeInRight" data-wow-delay="0.2s">Bundled With Tons of</h3> -->
                 <h2 class="wow fadeInRight" data-wow-delay="0.4s">日式和風</h2>
                 <h4 class="wow fadeInRight" data-wow-delay="0.6s">Parallax, Video, Product, Premium Addons and More...</h4>
-                <a href="#" class="btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">我要預約</a>
+                <a href="#" class="btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">預約攝影棚</a>
               </div>
             </div>
             <div class="carousel-item">
@@ -90,7 +98,7 @@
                 <!-- <h3 class="wow fadeInRight" data-wow-delay="0.2s">Ready For</h3> -->
                 <h2 class="wow fadeInRight" data-wow-delay="0.4s">武士</h2>
                 <h4 class="wow fadeInRight" data-wow-delay="0.6s">App, Business, SaaS and Landing Pages</h4>
-                <a href="#" class="btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">我要預約</a>
+                <a href="#" class="btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">預約攝影棚</a>
               </div>
             </div>
             <div class="carousel-item">
@@ -99,7 +107,7 @@
                 <!-- <h3 class="wow fadeInRight" data-wow-delay="0.2s">Ready For</h3> -->
                 <h2 class="wow fadeInRight" data-wow-delay="0.4s">日本神社風格</h2>
                 <h4 class="wow fadeInRight" data-wow-delay="0.6s">App, Business, SaaS and Landing Pages</h4>
-                <a href="#" class="btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">我要預約</a>
+                <a href="#" class="btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">預約攝影棚</a>
               </div>
             </div>
           </div>
@@ -123,7 +131,9 @@
         <div class="section-header">          
           <h2 class="section-title">關於我們</h2>
           <span>About Us</span>
-          <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos debitis.</p>
+          <p class="section-subtitle">
+            <!-- Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos debitis. -->
+          </p>
         </div>
         <div class="row">
           <div class="col-md-4 col-xs-12">
@@ -316,13 +326,10 @@
       <section class="footer-Content">
         <div class="container">
           <div class="row">
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-mb-12">
+            <div class="col-md-4 col-sm-6 col-xs-6 col-mb-12">
               <h3>主題攝影棚</h3>
               <div class="textwidget">
-                <p>If you think you have the passion, 
-                attitude and capability to join us 
-                the next big software company
-                s so that we can get the convers.</p>
+                <p>aaaa dkalsjl jkjdaskjfkadkf ljkasj fkdjklj flksad</p>
               </div>
               <!-- <ul class="footer-social">
                 <li><a class="facebook" href="#"><i class="lni-facebook-filled"></i></a></li>
@@ -343,7 +350,7 @@
                 </ul>
               </div>
             </div> -->
-            <div class="col-lg-9 col-md-9 col-sm-6 col-xs-6 col-mb-12">
+            <div class="offset-1 col-md-7 col-sm-6 col-xs-6 col-mb-12">
               <div class="widget">
                 <h3 class="block-title">Contact Us</h3>
                 <ul class="contact-footer">
