--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
       <nav class="navbar navbar-expand-md fixed-top scrolling-navbar navbar-bg-dark">
         <div class="container">          
           <a class="navbar-brand" href="index.html">
-            <span class="lni-bulb"></span>主題攝影棚
+            <!-- <span class="lni-bulb"></span>主題攝影棚 -->
+            <img src="img/3.png" width="110%" alt="logo" />
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <i class="lni-menu"></i>
@@ -49,7 +50,7 @@
                 <a class="nav-link page-scroll text-gray" href="#team">關於我們</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link page-scroll text-gray" href="#choose">選擇攝影棚</a>
+                <a class="nav-link page-scroll text-gray" href="choose.html">選擇攝影棚</a>
               </li>  
               <li class="nav-item">
                 <a class="nav-link page-scroll text-gray" href="#book">預約</a>
@@ -136,7 +137,14 @@
           </p>
         </div>
         <div class="row">
-          <div class="col-md-4 col-xs-12">
+          <div class="col-4">
+          </div>
+          <div class="col-4">
+            <img src="img/logo1_white.png" width="100" alt="logo" />
+            <span class="px-3"></span>
+            關於神無月撮影所，以下(略)
+          </div>
+          <!-- <div class="col-md-4 col-xs-12">
             <div class="single-team">
               <img src="img/team/team1.jpg" alt="">
               <div class="team-details">
@@ -186,42 +194,11 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
     <!-- Team section End -->
-
-    <!-- Choose section Start -->
-    <section id="choose">
-      <div id="carousel-slider" class="carousel slide carousel-fade" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#carousel-slider" data-slide-to="0" class="active"></li>
-          <li data-target="#carousel-slider" data-slide-to="1"></li>
-          <li data-target="#carousel-slider" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner" role="listbox">
-          <div class="carousel-item active">
-            <img src="img/slider/bg-1.png" width="100%" alt="" style="filter: brightness(0.65);">
-          </div>
-          <div class="carousel-item">
-            <img src="img/slider/bg-2.png" width="100%" alt="" style="filter: brightness(0.65);">
-          </div>
-          <div class="carousel-item">
-            <img src="img/slider/bg-3.png" width="100%" alt="" style="filter: brightness(0.65);">
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#carousel-slider" role="button" data-slide="prev">
-          <span class="carousel-control" aria-hidden="true"><i class="lni-chevron-left"></i></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carousel-slider" role="button" data-slide="next">
-          <span class="carousel-control" aria-hidden="true"><i class="lni-chevron-right"></i></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
-    </section>
-    <!-- Choose section End -->
 
     <!-- Contact Section Start -->
     <section id="contact" class="section">      
@@ -321,15 +298,17 @@
     <!-- Map Section End -->
 
     <!-- Footer Section Start -->
-    <footer>
+    <footer class="border-top">
       <!-- Footer Area Start -->
       <section class="footer-Content">
         <div class="container">
           <div class="row">
-            <div class="col-md-4 col-sm-6 col-xs-6 col-mb-12">
-              <h3>主題攝影棚</h3>
+            <div class="col-md-2 col-sm-6 col-xs-6 col-mb-12">
+              <h3>
+                <img src="img/logo1_white.png" width="100" alt="logo" />
+              </h3>
               <div class="textwidget">
-                <p>aaaa dkalsjl jkjdaskjfkadkf ljkasj fkdjklj flksad</p>
+                <!-- <p>aaaa dkalsjl jkjdaskjfkadkf ljkasj fkdjklj flksad</p> -->
               </div>
               <!-- <ul class="footer-social">
                 <li><a class="facebook" href="#"><i class="lni-facebook-filled"></i></a></li>
@@ -350,7 +329,7 @@
                 </ul>
               </div>
             </div> -->
-            <div class="offset-1 col-md-7 col-sm-6 col-xs-6 col-mb-12">
+            <div class="col-md-10 col-sm-6 col-xs-6 col-mb-12">
               <div class="widget">
                 <h3 class="block-title">Contact Us</h3>
                 <ul class="contact-footer">
