--- a/index.html
+++ b/index.html
@@ -85,32 +85,37 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img src="img/slider/bg-2.png" width="100%" alt="" style="filter: brightness(0.65);">
+              <img src="img/slider/bg-2.png" width="100%" alt="" style="filter: brightness(0.45);">
               <div class="carousel-caption text-center">
-                <!-- <h3 class="wow fadeInRight" data-wow-delay="0.2s">Bundled With Tons of</h3> -->
-                <h2 class="wow fadeInRight" data-wow-delay="0.4s">日式和風</h2>
-                <h4 class="wow fadeInRight" data-wow-delay="0.6s">Parallax, Video, Product, Premium Addons and More...</h4>
+                <h3 class="wow fadeInRight" data-wow-delay="0.2s">1617年 - 1946年</h3>
+                <h2 class="wow fadeInRight" data-wow-delay="0.4s">吉原遊廓</h2>
+                <h4 class="wow fadeInRight" data-wow-delay="0.6s">
+                  江戶時代起源，男人的樂園<br>
+                  那是一個屬於時代的悲歌及浪漫
+                </h4>
                 <a href="#" class="btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">預約攝影棚</a>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="img/slider/bg-3.png" width="100%" alt="" style="filter: brightness(0.65);">
+              <img src="img/slider/bg-3.jpg" width="100%" alt="" style="filter: brightness(0.45);">
               <div class="carousel-caption text-center">
-                <!-- <h3 class="wow fadeInRight" data-wow-delay="0.2s">Ready For</h3> -->
-                <h2 class="wow fadeInRight" data-wow-delay="0.4s">武士</h2>
-                <h4 class="wow fadeInRight" data-wow-delay="0.6s">App, Business, SaaS and Landing Pages</h4>
+                <h3 class="wow fadeInRight" data-wow-delay="0.2s">1603年 - 1868年</h3>
+                <h2 class="wow fadeInRight" data-wow-delay="0.4s">江户幕府</h2>
+                <h4 class="wow fadeInRight" data-wow-delay="0.6s">
+                  又稱作「德川幕府」，江戶時代初期的太平盛世，是在結束戰國亂世的人民心中的和平曙光。
+                </h4>
                 <a href="#" class="btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">預約攝影棚</a>
               </div>
             </div>
-            <div class="carousel-item">
+            <!-- <div class="carousel-item">
               <img src="img/slider/bg-4.png" width="100%" alt="" style="filter: brightness(0.65);">
               <div class="carousel-caption text-center">
-                <!-- <h3 class="wow fadeInRight" data-wow-delay="0.2s">Ready For</h3> -->
+                <h3 class="wow fadeInRight" data-wow-delay="0.2s">Ready For</h3>
                 <h2 class="wow fadeInRight" data-wow-delay="0.4s">日本神社風格</h2>
                 <h4 class="wow fadeInRight" data-wow-delay="0.6s">App, Business, SaaS and Landing Pages</h4>
                 <a href="#" class="btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">預約攝影棚</a>
               </div>
-            </div>
+            </div> -->
           </div>
           <a class="carousel-control-prev" href="#carousel-slider" role="button" data-slide="prev">
             <span class="carousel-control" aria-hidden="true"><i class="lni-chevron-left"></i></span>
