新增攝影棚子頁面

--- a/choose.html
+++ b/choose.html
@@ -97,10 +97,10 @@
     <!-- Choose section End -->    
     <div class="mt-2">&nbsp;</div>
     <div class="section-group row mx-5 mt-5">
-      <div class="col-md-5 px-0">
-        <img src="img/combo1/img_2038.jpeg" width="100%" alt="Hills">
+      <div class="col-md-5 px-0 py-2">
+        <img src="img/combo1/img_2038.jpeg" width="95%" alt="Hills">
       </div>
-      <div class="col-md-7 pl-5 py-3">
+      <div class="col-md-7 pl-5">
         <div class="text-gray">
           <h2 class="wow fadeInRight mb-3" data-wow-delay="0.4s">江户幕府</h2>
           <h4 class="wow fadeInRight mb-4" data-wow-delay="0.6s">
@@ -116,7 +116,7 @@
       </div>
     </div>
     <div class="section-group row mx-5">
-      <div class="col-md-7 py-3">
+      <div class="col-md-7">
         <div class="text-gray">
           <h2 class="wow fadeInRight mb-3" data-wow-delay="0.4s">吉原遊廓</h2>
           <h4 class="wow fadeInRight mb-4" data-wow-delay="0.6s">
@@ -126,7 +126,7 @@
           <a href="choose2.html" class="btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">選擇攝影棚</a>
         </div>
       </div>
-      <div class="col-md-5 px-0">
+      <div class="col-md-5 px-0 py-2">
         <img src="img/combo2/dsc-1561_1_orig.jpg" width="100%" alt="Hills">
       </div>
     </div>
@@ -136,10 +136,10 @@
       </div>
     </div>
     <div class="section-group row mx-5 mb-3">
-      <div class="col-md-5 px-0">
+      <div class="col-md-5 px-0 py-2">
         <img src="img/combo3/dsc-1433_orig.jpg" width="100%" alt="Hills">
       </div>
-      <div class="col-md-7 pl-5 py-3">
+      <div class="col-md-7 pl-5">
         <div class="text-gray">
           <h2 class="wow fadeInRight mb-3" data-wow-delay="0.4s">大正浪漫</h2>
           <h4 class="wow fadeInRight mb-4" data-wow-delay="0.6s">
@@ -285,7 +285,7 @@
     
     <script>
       $(function() {
-        // $('#myModal').modal('show');
+        $('#myModal').modal('show');
       });
     </script>
 
