--- a/choose.html
+++ b/choose.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Bootstrap, Landing page, Template, Registration, Landing">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="author" content="Grayrids">
-    <title>主題攝影棚</title>
+    <title>神無月撮影所 - 選擇攝影棚</title>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -53,7 +53,7 @@
                 <a class="nav-link text-gray is-active active" href="choose.html">選擇攝影棚</a>
               </li>  
               <li class="nav-item">
-                <a class="nav-link text-gray" href="index.html#book">預約</a>
+                <a class="nav-link text-gray" href="book.html">預約</a>
               </li>  
               <li class="nav-item">
                 <a class="nav-link text-gray" href="index.html#contact">聯絡我們</a>
@@ -65,48 +65,22 @@
     </header>
     <!-- Header Section End --> 
 
-    <!-- Choose section Start -->
-    <!-- <section id="choose">
-      <div id="carousel-slider" class="carousel slide carousel-fade" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#carousel-slider" data-slide-to="0" class="active"></li>
-          <li data-target="#carousel-slider" data-slide-to="1"></li>
-          <li data-target="#carousel-slider" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner" role="listbox">
-          <div class="carousel-item active">
-            <img src="img/slider/bg-1.png" width="100%" alt="" style="filter: brightness(0.65);">
-          </div>
-          <div class="carousel-item">
-            <img src="img/slider/bg-2.png" width="100%" alt="" style="filter: brightness(0.65);">
-          </div>
-          <div class="carousel-item">
-            <img src="img/slider/bg-3.png" width="100%" alt="" style="filter: brightness(0.65);">
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#carousel-slider" role="button" data-slide="prev">
-          <span class="carousel-control" aria-hidden="true"><i class="lni-chevron-left"></i></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carousel-slider" role="button" data-slide="next">
-          <span class="carousel-control" aria-hidden="true"><i class="lni-chevron-right"></i></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
-    </section> -->
     <!-- Choose section End -->    
     <div class="mt-2">&nbsp;</div>
     <div class="section-group row mx-5 mt-5">
       <div class="col-md-5 px-0 py-2">
         <img src="img/combo1/img_2038.jpeg" width="95%" alt="Hills">
       </div>
-      <div class="col-md-7 pl-5">
+      <div class="col-md-7 pl-5 position-relative">
         <div class="text-gray">
           <h2 class="wow fadeInRight mb-3" data-wow-delay="0.4s">江户幕府</h2>
           <h4 class="wow fadeInRight mb-4" data-wow-delay="0.6s">
             又稱作「德川幕府」，江戶時代初期的太平盛世，是在結束戰國亂世的人民心中的和平曙光。
           </h4>
-          <a href="choose1.html" class="btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">選擇攝影棚</a>
+        </div>
+        <div class="position-absolute d-flex justify-content-end" style="right: 0; bottom: 5px;">
+          <a href="choose1.html" class="mr-3 btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">看更多</a>
+          <a href="book.html?item=1" class="btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">直接預約</a>
         </div>
       </div>
     </div>
@@ -116,14 +90,17 @@
       </div>
     </div>
     <div class="section-group row mx-5">
-      <div class="col-md-7">
+      <div class="col-md-7 position-relative">
         <div class="text-gray">
           <h2 class="wow fadeInRight mb-3" data-wow-delay="0.4s">吉原遊廓</h2>
           <h4 class="wow fadeInRight mb-4" data-wow-delay="0.6s">
             江戶時代起源，男人的樂園<br>
             那是一個屬於時代的悲歌及浪漫
           </h4>
-          <a href="choose2.html" class="btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">選擇攝影棚</a>
+          <div class="position-absolute d-flex justify-content-end" style="right: 20px; bottom: 5px;">
+            <a href="choose1.html" class="mr-3 btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">看更多</a>
+            <a href="book.html?item=1" class="btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">直接預約</a>
+          </div>
         </div>
       </div>
       <div class="col-md-5 px-0 py-2">
@@ -135,18 +112,21 @@
         <hr>
       </div>
     </div>
-    <div class="section-group row mx-5 mb-3">
+    <div class="section-group row mx-5 mb-4">
       <div class="col-md-5 px-0 py-2">
         <img src="img/combo3/dsc-1433_orig.jpg" width="100%" alt="Hills">
       </div>
-      <div class="col-md-7 pl-5">
+      <div class="col-md-7 pl-5 position-relative">
         <div class="text-gray">
           <h2 class="wow fadeInRight mb-3" data-wow-delay="0.4s">大正浪漫</h2>
           <h4 class="wow fadeInRight mb-4" data-wow-delay="0.6s">
             日本史上年號最短的時代<br>
             戰爭後的各種意識抬頭以及西洋化，體現在時尚、建築上面，因此又稱「大正浪漫」
           </h4>
-          <a href="choose3.html" class="btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">選擇攝影棚</a>
+          <div class="position-absolute d-flex justify-content-end" style="right: 0; bottom: 5px;">
+            <a href="choose3.html" class="mr-3 btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">看更多</a>
+            <a href="book.html?item=3" class="btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">直接預約</a>
+          </div>
         </div>
       </div>
     </div>
@@ -285,7 +265,7 @@
     
     <script>
       $(function() {
-        $('#myModal').modal('show');
+        // $('#myModal').modal('show');
       });
     </script>
 
