--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Bootstrap, Landing page, Template, Registration, Landing">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="author" content="Grayrids">
-    <title>主題攝影棚</title>
+    <title>神無月撮影所</title>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -53,7 +53,7 @@
                 <a class="nav-link page-scroll text-gray" href="choose.html">選擇攝影棚</a>
               </li>  
               <li class="nav-item">
-                <a class="nav-link page-scroll text-gray" href="#book">預約</a>
+                <a class="nav-link page-scroll text-gray" href="book.html">預約</a>
               </li>  
               <li class="nav-item">
                 <a class="nav-link page-scroll text-gray" href="#contact">聯絡我們</a>
@@ -72,16 +72,15 @@
             <li data-target="#carousel-slider" data-slide-to="2"></li>
           </ol>
           <div class="carousel-inner" role="listbox">
-            <div class="carousel-item active">
-              <img src="img/slider/bg-1.png" width="100%" alt="" style="filter: brightness(0.65);">
+            <div class="carousel-item">
+              <img src="img/slider/bg-3.jpg" width="100%" alt="" style="filter: brightness(0.45);">
               <div class="carousel-caption text-center">
-                <h3 class="wow fadeInRight" data-wow-delay="0.2s">1912年 - 1926年</h1>  
-                <h2 class="wow fadeInRight" data-wow-delay="0.4s">大正浪漫</h2>
+                <h3 class="wow fadeInRight" data-wow-delay="0.2s">1603年 - 1868年</h3>
+                <h2 class="wow fadeInRight" data-wow-delay="0.4s">江户幕府</h2>
                 <h4 class="wow fadeInRight" data-wow-delay="0.6s">
-                  日本史上年號最短的時代<br>
-                  戰爭後的各種意識抬頭以及西洋化，體現在時尚、建築上面，因此又稱「大正浪漫」
+                  又稱作「德川幕府」，江戶時代初期的太平盛世，是在結束戰國亂世的人民心中的和平曙光。
                 </h4>
-                <a href="#" class="btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">預約攝影棚</a>
+                <a href="choose1.html" class="btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">預約攝影棚</a>
               </div>
             </div>
             <div class="carousel-item">
@@ -93,18 +92,19 @@
                   江戶時代起源，男人的樂園<br>
                   那是一個屬於時代的悲歌及浪漫
                 </h4>
-                <a href="#" class="btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">預約攝影棚</a>
+                <a href="choose2.html" class="btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">預約攝影棚</a>
               </div>
             </div>
-            <div class="carousel-item">
-              <img src="img/slider/bg-3.jpg" width="100%" alt="" style="filter: brightness(0.45);">
+            <div class="carousel-item active">
+              <img src="img/slider/bg-1.png" width="100%" alt="" style="filter: brightness(0.65);">
               <div class="carousel-caption text-center">
-                <h3 class="wow fadeInRight" data-wow-delay="0.2s">1603年 - 1868年</h3>
-                <h2 class="wow fadeInRight" data-wow-delay="0.4s">江户幕府</h2>
+                <h3 class="wow fadeInRight" data-wow-delay="0.2s">1912年 - 1926年</h1>  
+                <h2 class="wow fadeInRight" data-wow-delay="0.4s">大正浪漫</h2>
                 <h4 class="wow fadeInRight" data-wow-delay="0.6s">
-                  又稱作「德川幕府」，江戶時代初期的太平盛世，是在結束戰國亂世的人民心中的和平曙光。
+                  日本史上年號最短的時代<br>
+                  戰爭後的各種意識抬頭以及西洋化，體現在時尚、建築上面，因此又稱「大正浪漫」
                 </h4>
-                <a href="#" class="btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">預約攝影棚</a>
+                <a href="choose3.html" class="btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">預約攝影棚</a>
               </div>
             </div>
             <!-- <div class="carousel-item">
