小地方修正

--- a/book.html
+++ b/book.html
@@ -102,7 +102,7 @@
       </div>
       <div class="col-md-6 pl-3 position-relative">
         <div class="text-gray">
-          <select class="mb-3 form-control form-control-lg w-25 py-0 px-3 mt-1" id="selectBox" name="item">
+          <select class="mb-3 form-control form-control-lg w-25 py-0 px-3 mt-1" id="selectBox" name="item" style="height: 55px;">
             <option value="1">江户幕府</option>
             <option value="2">吉原遊廓</option>
             <option value="3">大正浪漫</option>
@@ -110,7 +110,7 @@
           <p class="mb-3">攝影棚建議使用人數：<span id="titleBox"></span></p>
           <!-- <h2 id="titleBox" class="wow fadeInRight mb-3" data-wow-delay="0.4s"></h2> -->
           <input type="date" value="2022-05-26" class="form-control w-50" />
-          <select class="mb-3 form-control form-control-lg w-50 py-0 px-3 mt-1" id="timeBox" name="time">
+          <select class="mb-3 form-control form-control-lg w-50 py-0 px-3 mt-1" id="timeBox" name="time" style="height: 55px;">
             <option value="1">13:00 - 14:00</option>
             <option value="1">14:00 - 15:00</option>
             <option value="1">15:00 - 16:00</option>
