--- a/choose2.html
+++ b/choose2.html
@@ -168,6 +168,10 @@
       </div>
     </div>    
 
+    <div class="text-center mb-5">
+      <a href="book.html?item=2" class="btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">預約該攝影棚</a>
+    </div>
+
     <!-- Footer Section Start -->
     <footer class="border-top">
       <!-- Footer Area Start -->
