--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- Header Section Start -->
     <header id="slider-area">  
       <nav class="navbar navbar-expand-md fixed-top scrolling-navbar navbar-bg-dark">
-        <div class="container">          
+        <div class="container">
           <a class="navbar-brand" href="index.html">
             <!-- <span class="lni-bulb"></span>主題攝影棚 -->
             <img src="img/3.png" width="110%" alt="logo" />
@@ -239,7 +239,7 @@
                     </div>
                     <div class="col-md-12">
                       <div class="form-group"> 
-                        <textarea class="form-control" id="message" placeholder="想說的話，想與我們聯絡的事項..." rows="7" data-error="Write your message" required></textarea>
+                        <textarea class="form-control" id="message" placeholder="想說的話，想與我們聯絡的事項..." rows="7" data-error="Write your message" style="border-radius: 25px !important;" required></textarea>
                         <div class="help-block with-errors"></div>
                       </div>
                       <div class="submit-button">
