--- a/choose.html
+++ b/choose.html
@@ -66,71 +66,73 @@
     <!-- Header Section End --> 
 
     <!-- Choose section End -->    
-    <div class="mt-2">&nbsp;</div>
-    <div class="section-group row mx-5 mt-5">
-      <div class="col-md-5 px-0 py-2">
-        <img src="img/combo1/img_2038.jpeg" width="95%" alt="Hills">
-      </div>
-      <div class="col-md-7 pl-5 position-relative">
-        <div class="text-gray">
-          <h2 class="wow fadeInRight mb-3" data-wow-delay="0.4s">江户幕府</h2>
-          <h4 class="wow fadeInRight mb-4" data-wow-delay="0.6s">
-            又稱作「德川幕府」，江戶時代初期的太平盛世，是在結束戰國亂世的人民心中的和平曙光。
-          </h4>
+    <div class="container">
+      <div class="mt-2">&nbsp;</div>
+      <div class="section-group row mx-1 mt-5">
+        <div class="col-md-5 px-0 py-2">
+          <img src="img/combo1/img_2038.jpeg" width="95%" alt="Hills">
         </div>
-        <div class="position-absolute d-flex justify-content-end" style="right: 0; bottom: 5px;">
-          <a href="choose1.html" class="mr-3 btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">看更多</a>
-          <a href="book.html?item=1" class="btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">直接預約</a>
-        </div>
-      </div>
-    </div>
-    <div class="row mx-5">
-      <div class="col-12 px-0">
-        <hr>
-      </div>
-    </div>
-    <div class="section-group row mx-5">
-      <div class="col-md-7 position-relative">
-        <div class="text-gray">
-          <h2 class="wow fadeInRight mb-3" data-wow-delay="0.4s">吉原遊廓</h2>
-          <h4 class="wow fadeInRight mb-4" data-wow-delay="0.6s">
-            江戶時代起源，男人的樂園<br>
-            那是一個屬於時代的悲歌及浪漫
-          </h4>
-          <div class="position-absolute d-flex justify-content-end" style="right: 20px; bottom: 5px;">
+        <div class="col-md-7 pl-5 position-relative">
+          <div class="text-gray">
+            <h2 class="wow fadeInRight mb-3" data-wow-delay="0.4s">江户幕府</h2>
+            <h4 class="wow fadeInRight mb-4" data-wow-delay="0.6s">
+              又稱作「德川幕府」，江戶時代初期的太平盛世，是在結束戰國亂世的人民心中的和平曙光。
+            </h4>
+          </div>
+          <div class="position-absolute d-flex justify-content-end" style="right: 0; bottom: 5px;">
             <a href="choose1.html" class="mr-3 btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">看更多</a>
             <a href="book.html?item=1" class="btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">直接預約</a>
           </div>
         </div>
       </div>
-      <div class="col-md-5 px-0 py-2">
-        <img src="img/combo2/dsc-1561_1_orig.jpg" width="100%" alt="Hills">
+      <div class="row mx-1">
+        <div class="col-12 px-0">
+          <hr>
+        </div>
       </div>
-    </div>
-    <div class="row mx-5">
-      <div class="col-12 px-0">
-        <hr>
+      <div class="section-group row mx-1">
+        <div class="col-md-7 position-relative">
+          <div class="text-gray">
+            <h2 class="wow fadeInRight mb-3" data-wow-delay="0.4s">吉原遊廓</h2>
+            <h4 class="wow fadeInRight mb-4" data-wow-delay="0.6s">
+              江戶時代起源，男人的樂園<br>
+              那是一個屬於時代的悲歌及浪漫
+            </h4>
+            <div class="position-absolute d-flex justify-content-end" style="right: 20px; bottom: 5px;">
+              <a href="choose2.html" class="mr-3 btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">看更多</a>
+              <a href="book.html?item=2" class="btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">直接預約</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-5 px-0 py-2">
+          <img src="img/combo2/dsc-1561_1_orig.jpg" width="100%" alt="Hills">
+        </div>
       </div>
-    </div>
-    <div class="section-group row mx-5 mb-4">
-      <div class="col-md-5 px-0 py-2">
-        <img src="img/combo3/dsc-1433_orig.jpg" width="100%" alt="Hills">
+      <div class="row mx-1">
+        <div class="col-12 px-0">
+          <hr>
+        </div>
       </div>
-      <div class="col-md-7 pl-5 position-relative">
-        <div class="text-gray">
-          <h2 class="wow fadeInRight mb-3" data-wow-delay="0.4s">大正浪漫</h2>
-          <h4 class="wow fadeInRight mb-4" data-wow-delay="0.6s">
-            日本史上年號最短的時代<br>
-            戰爭後的各種意識抬頭以及西洋化，體現在時尚、建築上面，因此又稱「大正浪漫」
-          </h4>
-          <div class="position-absolute d-flex justify-content-end" style="right: 0; bottom: 5px;">
-            <a href="choose3.html" class="mr-3 btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">看更多</a>
-            <a href="book.html?item=3" class="btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">直接預約</a>
+      <div class="section-group row mx-1 mb-4">
+        <div class="col-md-5 px-0 py-2">
+          <img src="img/combo3/dsc-1433_orig.jpg" width="100%" alt="Hills">
+        </div>
+        <div class="col-md-7 pl-5 position-relative">
+          <div class="text-gray">
+            <h2 class="wow fadeInRight mb-3" data-wow-delay="0.4s">大正浪漫</h2>
+            <h4 class="wow fadeInRight mb-4" data-wow-delay="0.6s">
+              日本史上年號最短的時代<br>
+              戰爭後的各種意識抬頭以及西洋化，體現在時尚、建築上面，因此又稱「大正浪漫」
+            </h4>
+            <div class="position-absolute d-flex justify-content-end" style="right: 0; bottom: 5px;">
+              <a href="choose3.html" class="mr-3 btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">看更多</a>
+              <a href="book.html?item=3" class="btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">直接預約</a>
+            </div>
           </div>
         </div>
       </div>
     </div>
-    
+
     <!-- Modal -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
