--- a/choose3.html
+++ b/choose3.html
@@ -169,7 +169,7 @@
     </div>
         
     <div class="text-center mb-5">
-      <a href="book.html?item=3" class="btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">預約該攝影棚</a>
+      <a href="book.html?item=3141" class="btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">預約該攝影棚</a>
     </div>
 
     <!-- Footer Section Start -->
@@ -180,7 +180,7 @@
           <div class="row">
             <div class="col-md-2 col-sm-6 col-xs-6 col-mb-12">
               <h3>
-                <img src="img/logo1_white.png" width="100" alt="logo" />
+                <img src="img/logo1_gray.png" width="100" alt="logo" />
               </h3>
               <div class="textwidget">
                 <!-- <p>aaaa dkalsjl jkjdaskjfkadkf ljkasj fkdjklj flksad</p> -->
