--- a/choose.html
+++ b/choose.html
@@ -169,7 +169,7 @@
           <div class="row">
             <div class="col-md-2 col-sm-6 col-xs-6 col-mb-12">
               <h3>
-                <img src="img/logo1_white.png" width="100" alt="logo" />
+                <img src="img/logo1_gray.png" width="100" alt="logo" />
               </h3>
               <div class="textwidget">
                 <!-- <p>aaaa dkalsjl jkjdaskjfkadkf ljkasj fkdjklj flksad</p> -->
