--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           <div class="col-4">
           </div>
           <div class="col-4">
-            <img src="img/logo1_white.png" width="100" alt="logo" />
+            <img src="img/logo1_gray.png" width="100" alt="logo" />
             <span class="px-3"></span>
             關於神無月撮影所，以下(略)
           </div>
@@ -310,7 +310,7 @@
           <div class="row">
             <div class="col-md-2 col-sm-6 col-xs-6 col-mb-12">
               <h3>
-                <img src="img/logo1_white.png" width="100" alt="logo" />
+                <img src="img/logo1_gray.png" width="100" alt="logo" />
               </h3>
               <div class="textwidget">
                 <!-- <p>aaaa dkalsjl jkjdaskjfkadkf ljkasj fkdjklj flksad</p> -->
