--- a/choose3.html
+++ b/choose3.html
@@ -50,13 +50,13 @@
                 <a class="nav-link text-gray" href="index.html#team">關於我們</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-gray is-active active" href="choose.html">選擇攝影棚</a>
+                <a class="nav-link text-gray is-active active" href="choose.html">棚景介紹</a>
               </li>  
               <li class="nav-item">
                 <a class="nav-link text-gray" href="book.html">預約</a>
               </li>  
               <li class="nav-item">
-                <a class="nav-link text-gray" href="index.html#contact">聯絡我們</a>
+                <a class="nav-link text-gray" href="contact.html">聯絡我們</a>
               </li> 
             </ul>              
           </div>
