更改按鈕顏色

--- a/choose.html
+++ b/choose.html
@@ -80,8 +80,8 @@
             </h4>
           </div>
           <div class="position-absolute d-flex justify-content-end" style="right: 0; bottom: 5px;">
-            <a href="choose1.html" class="mr-3 btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">看更多</a>
-            <a href="book.html?item=1" class="btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">直接預約</a>
+            <a href="choose1.html" class="mr-3 btn btn-lg btn-view btn-effect wow fadeInRight" data-wow-delay="0.9s">看更多</a>
+            <a href="book.html?item=1" class="btn btn-lg btn-view btn-effect wow fadeInRight" data-wow-delay="0.9s">直接預約</a>
           </div>
         </div>
       </div>
@@ -99,8 +99,8 @@
               那是一個屬於時代的悲歌及浪漫
             </h4>
             <div class="position-absolute d-flex justify-content-end" style="right: 20px; bottom: 5px;">
-              <a href="choose2.html" class="mr-3 btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">看更多</a>
-              <a href="book.html?item=2" class="btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">直接預約</a>
+              <a href="choose2.html" class="mr-3 btn btn-lg btn-view btn-effect wow fadeInRight" data-wow-delay="0.9s">看更多</a>
+              <a href="book.html?item=2" class="btn btn-lg btn-view btn-effect wow fadeInRight" data-wow-delay="0.9s">直接預約</a>
             </div>
           </div>
         </div>
@@ -125,8 +125,8 @@
               戰爭後的各種意識抬頭以及西洋化，體現在時尚、建築上面，因此又稱「大正浪漫」
             </h4>
             <div class="position-absolute d-flex justify-content-end" style="right: 0; bottom: 5px;">
-              <a href="choose3.html" class="mr-3 btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">看更多</a>
-              <a href="book.html?item=3" class="btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">直接預約</a>
+              <a href="choose3.html" class="mr-3 btn btn-lg btn-view btn-effect wow fadeInRight" data-wow-delay="0.9s">看更多</a>
+              <a href="book.html?item=3" class="btn btn-lg btn-view btn-effect wow fadeInRight" data-wow-delay="0.9s">直接預約</a>
             </div>
           </div>
         </div>
