新增棚景介紹的按鈕

--- a/choose.html
+++ b/choose.html
@@ -131,6 +131,17 @@
           </div>
         </div>
       </div>
+      <div class="row mx-1">
+        <div class="col-12 px-0">
+          <hr>
+        </div>
+      </div>
+
+      <div class="row mb-4">
+        <div class="col-12 text-center">
+          <a href="#" class="btn btn-lg btn-common" data-toggle="modal" data-target="#myModal">毫無想法嗎？看這裡！</a>
+        </div>
+      </div>
     </div>
 
     <!-- Modal -->
@@ -147,9 +158,13 @@
             </button>
           </div>
           <div class="modal-body">
+            <div class="d-flex mb-3">
+              <button type="button" class="btn btn-gray rounded py-3 w-50 mr-3" data-dismiss="modal">選項1: xxxx</button>
+              <button type="button" class="btn btn-gray rounded py-3 w-50">選項2: xxxx</button>
+            </div>
             <div class="d-flex">
-              <button type="button" class="btn btn-gray rounded py-3 w-50 mr-2" data-dismiss="modal">直接挑選攝影棚</button>
-              <button type="button" class="btn btn-red rounded py-3 w-50">暫無想法，給我多一點選擇</button>
+              <button type="button" class="btn btn-gray rounded py-3 w-50 mr-3" data-dismiss="modal">選項3: xxxx</button>
+              <button type="button" class="btn btn-gray rounded py-3 w-50">選項4: xxxx</button>
             </div>
           </div>
           <!-- <div class="modal-footer">
