--- a/choose.html
+++ b/choose.html
@@ -74,7 +74,7 @@
         </div>
         <div class="col-md-7 pl-5 position-relative">
           <div class="text-gray">
-            <h2 class="wow fadeInRight mb-3" data-wow-delay="0.4s">江户幕府</h2>
+            <h2 class="text-red wow fadeInRight mb-3" data-wow-delay="0.4s">江户幕府</h2>
             <h4 class="wow fadeInRight mb-4" data-wow-delay="0.6s">
               又稱作「德川幕府」，江戶時代初期的太平盛世，是在結束戰國亂世的人民心中的和平曙光。
             </h4>
@@ -93,7 +93,7 @@
       <div class="section-group row mx-1">
         <div class="col-md-7 position-relative">
           <div class="text-gray">
-            <h2 class="wow fadeInRight mb-3" data-wow-delay="0.4s">吉原遊廓</h2>
+            <h2 class="text-red wow fadeInRight mb-3" data-wow-delay="0.4s">吉原遊廓</h2>
             <h4 class="wow fadeInRight mb-4" data-wow-delay="0.6s">
               江戶時代起源，男人的樂園<br>
               那是一個屬於時代的悲歌及浪漫
@@ -119,7 +119,7 @@
         </div>
         <div class="col-md-7 pl-5 position-relative">
           <div class="text-gray">
-            <h2 class="wow fadeInRight mb-3" data-wow-delay="0.4s">大正浪漫</h2>
+            <h2 class="text-red wow fadeInRight mb-3" data-wow-delay="0.4s">大正浪漫</h2>
             <h4 class="wow fadeInRight mb-4" data-wow-delay="0.6s">
               日本史上年號最短的時代<br>
               戰爭後的各種意識抬頭以及西洋化，體現在時尚、建築上面，因此又稱「大正浪漫」
