調整所有頁面的footer

--- a/choose1.html
+++ b/choose1.html
@@ -196,13 +196,18 @@
             </div> -->
             <div class="col-md-10 col-sm-6 col-xs-6 col-mb-12">
               <div class="widget">
-                <h3 class="block-title">Contact Us</h3>
                 <ul class="contact-footer">
                   <li>
-                    <strong>地址 :</strong> <span>106 台北市大安區基隆路四段43號</span>
+                    <strong>地
+                      &nbsp;&nbsp;&nbsp;&nbsp;
+                      &nbsp;&nbsp;
+                      址 :</strong> <span>106 台北市大安區基隆路四段43號</span>
                   </li>
                   <li>
-                    <strong>電話 :</strong> <span>(02)2733-3141</span>
+                    <strong>電
+                      &nbsp;&nbsp;&nbsp;&nbsp;
+                      &nbsp;&nbsp;
+                      話 :</strong> <span>(02)2733-3141</span>
                   </li>
                   <li>
                     <strong>電子信箱 :</strong> <span><a href="#">contact-us@mail.ntust.edu.tw</a></span>
