--- a/choose.html
+++ b/choose.html
@@ -113,7 +113,7 @@
           <hr>
         </div>
       </div>
-      <div class="section-group row mx-1 mb-4">
+      <div class="section-group row mx-1">
         <div class="col-md-5 px-0 py-2">
           <img src="img/combo3/dsc-1433_orig.jpg" width="100%" alt="Hills">
         </div>
