調整關於我們的樣式

--- a/index.html
+++ b/index.html
@@ -143,16 +143,18 @@
           </p>
         </div>
         <div class="row">
-          <div class="col-3">
+          <div class="col-2">
           </div>
-          <div class="col-6">
+          <div class="col-8">
+            <div class="text-center mt-3 mb-4">
+              <img src="img/logo1_red.png" width="120" alt="logo" />
+            </div>
             <div class="d-flex align-items-start">
-              <img src="img/logo1_gray.png" width="100" alt="logo" />
-              <div class="ml-5">
-                <p class="text-gray">
+              <div class="text-center">
+                <p class="fs-18 text-gray">
                   「神無月」是農曆十月，是日本眾神聚集開會、各處沒有庇護的神靈的月份。
                 </p>
-                <p class="text-gray">
+                <p class="fs-18 text-gray">
                   我們希望能夠提供一個遠離繁忙車馬塵囂、充滿瑰麗和風幻想的地方，讓總是被現實壓的喘不過氣來的大家，也能夠趁著「神無月」悄悄地躲過神明目光，踏入不同時空的日本，享受不一樣的自己。
                 </p>
               </div>
