--- a/index.html
+++ b/index.html
@@ -147,11 +147,11 @@
           </div>
           <div class="col-8">
             <div class="text-center mt-3 mb-4">
-              <img src="img/logo1_red.png" width="120" alt="logo" />
+              <img src="img/logo1_red.png" width="150" alt="logo" />
             </div>
             <div class="d-flex align-items-start">
               <div class="text-center">
-                <p class="fs-18 text-gray">
+                <p class="fs-18 text-gray mb-4">
                   「神無月」是農曆十月，是日本眾神聚集開會、各處沒有庇護的神靈的月份。
                 </p>
                 <p class="fs-18 text-gray">
