--- a/index.html
+++ b/index.html
@@ -149,15 +149,16 @@
             <div class="text-center mt-3 mb-4">
               <img src="img/logo1_red.png" width="150" alt="logo" />
             </div>
-            <div class="d-flex align-items-start">
-              <div class="text-center">
-                <p class="fs-18 text-gray mb-4">
-                  「神無月」是農曆十月，是日本眾神聚集開會、各處沒有庇護的神靈的月份。
-                </p>
-                <p class="fs-18 text-gray">
-                  我們希望能夠提供一個遠離繁忙車馬塵囂、充滿瑰麗和風幻想的地方，讓總是被現實壓的喘不過氣來的大家，也能夠趁著「神無月」悄悄地躲過神明目光，踏入不同時空的日本，享受不一樣的自己。
-                </p>
-              </div>
+            <div class="text-center">
+              <p class="fs-18 text-gray mb-4">
+                「神無月」是農曆十月，是日本眾神聚集開會、各處沒有庇護的神靈的月份。
+              </p>
+              <p class="fs-18 text-gray text-center">
+                我們希望能夠提供一個遠離繁忙車馬塵囂、充滿瑰麗和風幻想的地方，<br>
+                讓總是被現實壓的喘不過氣來的大家，<br>
+                也能夠趁著「神無月」悄悄地躲過神明目光，<br>
+                踏入不同時空的日本，享受不一樣的自己。
+              </p>
             </div>
           </div>
           <!-- <div class="col-md-4 col-xs-12">
